test/corpus/test.txt
==================
Article Headers
==================
@@Article Name
@tag1
---

(document
  (article_headers
    (article_header
      (article_name)))
  (tags
    (tag_line
      (tag_name))))

==================
Multiple Headers and Tags
==================
@@Main Title
@@Alias Title
@tag1
@tag2
@tag3
---

(document
  (article_headers
    (article_header
      (article_name))
    (article_header
      (article_name)))
  (tags
    (tag_line
      (tag_name))
    (tag_line
      (tag_name))
    (tag_line
      (tag_name))))

==================
Headings
==================
@@Article
@tag

# Heading 1
## Heading 2
### Heading 3
---

(document
  (article_headers
    (article_header
      (article_name)))
  (tags
    (tag_line
      (tag_name)))
  (body
    (block
      (heading
        (heading_marker)
        (heading_content
          (text))))
    (block
      (heading
        (heading_marker)
        (heading_content
          (text))))
    (block
      (heading
        (heading_marker)
        (heading_content
          (text))))))

==================
Label Blocks
==================
@@Article
@tag

Introduction:
This is content under the introduction label.
It can span multiple lines.

Methodology:
- Step 1
- Step 2
---

(document
  (article_headers
    (article_header
      (article_name)))
  (tags
    (tag_line
      (tag_name)))
  (body
    (block
      (label_block
        (label_line)
        (indent)
        (label_content
          (block
            (paragraph_block
              (paragraph_content
                (text)
                (text)
                (text)))))
        (dedent)))
    (block
      (label_block
        (label_line)
        (indent)
        (label_content
          (block
            (list_block
              (list_item
                (list_marker)
                (list_item_content
                  (text)))
              (list_item
                (list_marker)
                (list_item_content
                  (text))))))
        (dedent)))))

==================
Nested Lists
==================
@@Article
- Item 1
- Item 2
  - Nested item
  - Another nested
- Item 3

1. First
2. Second
---

(document
  (article_headers
    (article_header
      (article_name)))
  (body
    (block
      (list_block
        (list_item
          (list_marker)
          (list_item_content
            (text)))
        (list_item
          (list_marker)
          (list_item_content
            (text))
          (indent)
          (list_nested_content
            (block
              (list_block
                (list_item
                  (list_marker)
                  (list_item_content
                    (text)))
                (list_item
                  (list_marker)
                  (list_item_content
                    (text))))))
          (dedent))
        (list_item
          (list_marker)
          (list_item_content
            (text)))))
    (block
      (list_block
        (list_item
          (list_marker)
          (list_item_content
            (text)))
        (list_item
          (list_marker)
          (list_item_content
            (text)))))))

==================
Formatting
==================
@@Article

This is **bold** text.
This is *italic* text.
This is ***bold italic*** text.
---

(document
  (article_headers
    (article_header
      (article_name)))
  (body
    (block
      (paragraph_block
        (paragraph_content
          (text)
          (formatted_text
            (bold
              (text)))
          (text))))
    (block
      (paragraph_block
        (paragraph_content
          (text)
          (formatted_text
            (italic
              (text)))
          (text))))
    (block
      (paragraph_block
        (paragraph_content
          (text)
          (formatted_text
            (bolditalic
              (text)))
          (text))))))

==================
Code Blocks
==================
@@Article

```python
def hello():
    print("Hello World")
```

```
Plain code block
```
---

(document
  (article_headers
    (article_header
      (article_name)))
  (body
    (block
      (code_block
        (language)
        (code_content)))
    (block
      (code_block
        (code_content)))))

==================
Links
==================
@@Article

[Article Name]
[Article/#Heading]
[Article/:Label]
[/#Local Heading]
[:Global Label]
[Link text](https://example.com)
---

(document
  (article_headers
    (article_header
      (article_name)))
  (body
    (block
      (paragraph_block
        (paragraph_content
          (link
            (zortex_link
              (link_text))))))
    (block
      (paragraph_block
        (paragraph_content
          (link
            (zortex_link
              (link_text))))))
    (block
      (paragraph_block
        (paragraph_content
          (link
            (zortex_link
              (link_text))))))
    (block
      (paragraph_block
        (paragraph_content
          (link
            (zortex_link
              (link_text))))))
    (block
      (paragraph_block
        (paragraph_content
          (link
            (zortex_link
              (link_text))))))
    (block
      (paragraph_block
        (paragraph_content
          (link
            (markdown_link
              (link_text)
              (url))))))))

==================
LaTeX
==================
@@Article

Inline math: $a^2 + b^2 = c^2$

Block math:

$$
\int_{0}^{\infty} e^{-x^2} dx = \frac{\sqrt{\pi}}{2}
$$
---

(document
  (article_headers
    (article_header
      (article_name)))
  (body
    (block
      (paragraph_block
        (paragraph_content
          (text)
          (inline_latex)
          (text))))
    (block
      (paragraph_block
        (paragraph_content
          (text))))
    (block
      (latex_block
        (latex_content)))))

==================
Multi-line Paragraphs
==================
@@Article

This paragraph has **bold**, *italic*, `code`, and [links]. It also has
math like $x = y$ and continues on multiple lines with various
***formatting*** options.

Another paragraph after a blank line.
---

(document
  (article_headers
    (article_header
      (article_name)))
  (body
    (block
      (paragraph_block
        (paragraph_content
          (text)
          (formatted_text
            (bold
              (text)))
          (text)
          (formatted_text
            (italic
              (text)))
          (text)
          (inline_code)
          (text)
          (link
            (zortex_link
              (link_text)))
          (text)
          (text)
          (inline_latex)
          (text)
          (formatted_text
            (bolditalic
              (text)))
          (text))))
    (block
      (paragraph_block
        (paragraph_content
          (text))))))
